# aeda5-2018

aeda5-2018/: .gitignore  CMakeLists.txt
aeda5-2018/include/: DNI.h  nodeBB.h  treeABB.h
aeda5-2018/src/: DNI.cpp  main.cpp
